# real-estate-quebec-tool

./: .gitignore  IDEAS.md  RUNBOOK.md  pyproject.toml  streamlit_app.py
qc_screener/: analyzer.py  centris.py  cities.py  cli.py  config.py  duproprio.py  geo.py  kijiji.py  lepine.py  llm_extract.py  logisquebec.py  market.py  models.py  proprio_direct.py  regions.py  registre_foncier.py  storage.py
