[project]
name = "real-estate-quebec-tool"
version = "0.1.0"
description = "Outils d'investissement immobilier au Québec (méthode Lépine) — screener, analyseur de deal, UI Streamlit"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "streamlit>=1.36",
    "plotly>=5.22",
    "pandas>=2.2",
    "anthropic>=0.40",
    "matplotlib>=3.8",
]

[project.scripts]
qc-screener = "qc_screener.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qc_screener"]
